# CS452

./: .gitignore  .gitmodules  .grade-win.toml  .grade.toml  CMakeLists.txt  CMakePresets.json  README-KOUNT-LAB.md  README.md  Retrospective.md  SRS.md  build.sh  clean.ps1  clean.sh  configure  configure-coverage  configure-debug  configure-sanitize  debug.sh  install-deps.sh  run-coverage.sh  run-leak-check.sh  run-segfault-test.sh  run-tests.sh  setup.sh  student.toml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  cmake-multi-platform.yml  coverage-report-lcov.yml  coverage.yml  test-multi-platform.yml
app/: CMakeLists.txt  main.c
cmake/: FindASan.cmake  FindReadline.cmake
src/: CMakeLists.txt  lab.c  lab.cpp  lab.h  labconfig.h.in  main.c
tests/: CMakeLists.txt  test-lab.c  test-lab.cpp
unity/: CMakeLists.txt
